# oraclecxcommerce-sdk

./: README.md  pyproject.toml
.github/workflows/: unit-test-and-lint-checker.yml
docs/: class-diagram-uml.md
oraclecxcommerce/: __init__.py  occ.py
oraclecxcommerce/errors/: __init__.py  occ_errors.py
oraclecxcommerce/modules/: __init__.py  orders.py  products.py  profiles.py  skus.py
oraclecxcommerce/services/: __init__.py  authenticator.py  session.py
tests/: test_oraclecxcommerce.py
tests/unit/: test_occ.py
tests/unit/modules/: test_orders.py  test_products.py  test_profiles.py  test_skus.py
tests/unit/services/: test_authenticator.py  test_occ_session.py
