[tool.poetry]
name = "oraclecxcommerce"
version = "0.1.0"
description = ""
authors = ["Renan Zulian <renanzulian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.1"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
